# opengl_wrapper

./: .gitmodules  .lvimrc  CMakeLists.txt
include/: effect.h  float16.h  gpu_shader.h  image.h  image_utils.h  oglw.h
include/oglw/: camera.h  float16.h  framebuffer.h  geometry.h  gl_utils.h  gpu_buffer.h  gpu_shader.h  hair_loader.h  image.h  image_utils.h  obj_loader.h  types.h  vec_types.h
src/: any.h  camera.cpp  cpu_image.cpp  effect.cpp  fast_array.h  fast_array_impl.h  framebuffer.cpp  geometry.cpp  gl_utils.cpp  gpu_buffer.cpp  gpu_image.cpp  gpu_shader.cpp  hair_loader.cpp  image.cpp  image_cpu.cpp  image_gpu.cpp  obj_loader.cpp  oglw.cpp
test/: gl_window.cpp  init_gl.h  test.cpp  test_any.cpp  test_core.cpp  test_effect.cpp  test_fast_array.cpp  test_geometry.cpp  test_hair_loader.cpp  test_image.cpp  test_obj_loader.cpp
test/oglw/: gl_window.h  test.cpp  test_geometry.cpp  test_hair_loader.cpp  test_image.cpp
